--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -3,14 +3,12 @@ owner: krubkrong # Your GitHub organization or username, where this repository l
 repo: status # The name of this repository
 
 sites:
-  - name: Google
-    url: https://www.google.com
-  - name: Wikipedia
-    url: https://en.wikipedia.org
-  - name: Hacker News
-    url: https://news.ycombinator.com
-  - name: Test Broken Site
-    url: https://thissitedoesnotexist.koj.co
+  - name: Krubkrong's Website
+    url: https://krubkrong.com
+  - name: Krubkrong's App
+    url: https://app.krubkrong.com
+  - name: Krubkrong's Api 
+    url: https://api.krubkrong.com
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
