--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -14,7 +14,7 @@ status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
   # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
   # cname: demo.upptime.js.org
-  baseUrl: /your-repo-name
+  baseUrl: /status
   logoUrl: https://avatars.githubusercontent.com/u/87474215?s=200&v=4
   name: krubkrong
   introTitle: "**Krubkrong** provide an affordable stock and inventory management system to retailers and small business."
