--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -13,8 +13,8 @@ sites:
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
   # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
-  # cname: demo.upptime.js.org
-  baseUrl: /status
+  cname: status.krubkrong.dev
+  # baseUrl: /status
   logoUrl: https://avatars.githubusercontent.com/u/87474215?s=200&v=4
   name: krubkrong
   introTitle: "**Krubkrong** provide an affordable stock and inventory management system to retailers and small business."
